DADAO-opcodes: add dadao-dasm function to parse and Makefile
Signed-off-by: laiyk <laiyankai@pkunity.com>

--- a/DADAO-opcodes/Makefile.opcodes
+++ b/DADAO-opcodes/Makefile.opcodes
@@ -39,5 +39,8 @@ opcodes-bitpat:
 	@test -d $(OPCODES_DST_DIR) || mkdir -p $(OPCODES_DST_DIR)
 	$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --bitpat $(OPCODES_OUTPUT_BITPAT)
 
+dadao-dasm:
+	$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --dasm dadao
+
 opcodes-clean:
 	@rm -fr $(OPCODES_DST_DIR)
