--- a/DADAO-opcodes/Makefile.opcodes
+++ b/DADAO-opcodes/Makefile.opcodes
@@ -3,8 +3,8 @@ PYTHON			:= /usr/bin/python3
 OPCODES_SRC_DIR		:= $(DIR_DADAO_TOP)/DADAO-opcodes
 OPCODES_DST_DIR		?= $(DIR_DADAO_TARGET)/__opcodes/
 
-OPCODES_PARSE		:= $(OPCODES_SRC_DIR)/parse-opcodes.py
-OPCODES_INPUT		:= $(OPCODES_SRC_DIR)/simrisc.opcodes
+OPCODES_PARSE		:= $(OPCODES_DST_DIR)/parse-opcodes.py
+OPCODES_INPUT		:= $(OPCODES_DST_DIR)/simrisc.opcodes
 OPCODES_OUTPUT_QEMU	:= $(OPCODES_DST_DIR)/output.qemu
 OPCODES_OUTPUT_BIN	:= $(OPCODES_DST_DIR)/output.bin
 OPCODES_OUTPUT_ENV	:= $(OPCODES_DST_DIR)/output.env
@@ -16,28 +16,27 @@ opcodes-clean:
 
 opcodes-source:
 	@test -d $(OPCODES_DST_DIR) || mkdir -p $(OPCODES_DST_DIR)
-	@cp -a $(OPCODES_PARSE) $(OPCODES_DST_DIR)
-	@cp -a $(OPCODES_INPUT) $(OPCODES_DST_DIR)
+	@cp -a $(OPCODES_SRC_DIR)/* $(OPCODES_DST_DIR)
 
 opcodes-qemu:
-	@test -d $(OPCODES_DST_DIR) || mkdir -p $(OPCODES_DST_DIR)
-	$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --decode $(OPCODES_OUTPUT_QEMU)
+	@test -d $(OPCODES_DST_DIR) || make -s opcodes-source
+	@$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --decode $(OPCODES_OUTPUT_QEMU)
 
 opcodes-binutils:
-	@test -d $(OPCODES_DST_DIR) || mkdir -p $(OPCODES_DST_DIR)
-	$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --opc $(OPCODES_OUTPUT_BIN)
+	@test -d $(OPCODES_DST_DIR) || make -s opcodes-source
+	@$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --opc $(OPCODES_OUTPUT_BIN)
 
 opcodes-disassemble:
-	@test -d $(OPCODES_DST_DIR) || mkdir -p $(OPCODES_DST_DIR)
-	$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --disassemble $(OPCODES_OUTPUT_DIS)
+	@test -d $(OPCODES_DST_DIR) || make -s opcodes-source
+	@$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --disassemble $(OPCODES_OUTPUT_DIS)
 
 opcodes-encoding:
-	@test -d $(OPCODES_DST_DIR) || mkdir -p $(OPCODES_DST_DIR)
-	$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --encoding $(OPCODES_OUTPUT_ENV)
+	@test -d $(OPCODES_DST_DIR) || make -s opcodes-source
+	@$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --encoding $(OPCODES_OUTPUT_ENV)
 
 opcodes-bitpat:
-	@test -d $(OPCODES_DST_DIR) || mkdir -p $(OPCODES_DST_DIR)
-	$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --bitpat $(OPCODES_OUTPUT_BITPAT)
+	@test -d $(OPCODES_DST_DIR) || make -s opcodes-source
+	@$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --bitpat $(OPCODES_OUTPUT_BITPAT)
 
 opcodes-highfive:
 	@make -s opcodes-clean
