DADAO-tests: rename Makerules to common.mk
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-tests/isa/Makefile
+++ b/DADAO-tests/isa/Makefile
@@ -4,7 +4,7 @@
 
 src_dir ?= .
 
-include $(src_dir)/../Makerules
+include $(src_dir)/../common.mk
 include $(src_dir)/dduii/Makefrag
 
 default: all
