--- a/DADAO-tests/bootrom/Makefile
+++ b/DADAO-tests/bootrom/Makefile
@@ -1,7 +1,7 @@
 bootrom_img = bootrom.dadao.img
 bootrom_dump = bootrom.dadao.dump
 
-include $(src_dir)/../Makerules
+include $(src_dir)/../common.mk
 
 default: img dump
 
