--- a/DADAO-tests/bootrom/Makefile
+++ b/DADAO-tests/bootrom/Makefile
@@ -13,7 +13,7 @@ dump: $(bootrom_dump)
 	$(DADAO_ELF_OBJCOPY) -O binary --change-addresses=-0x10000 $< $@
 
 %.elf: %.S linker.ld
-	$(DADAO_ELF_GCC) -Tlinker.ld $< -nostdlib -static -o $@
+	$(DADAO_ELF_GCC) -I$(src_dir)/../env/ -Tlinker.ld $< -nostdlib -static -o $@
 
 %.dump: %.elf
 	$(DADAO_ELF_OBJDUMP) -d $< > $@
