--- a/DADAO-tests/Makefile.tests
+++ b/DADAO-tests/Makefile.tests
@@ -3,11 +3,27 @@ DIR_DADAO_TESTS_BOOTROM_BUILD	:= $(DIR_DADAO_TOP)/__tests/bootrom/
 
 include DADAO-tests/Makefile.tests-isa
 include DADAO-tests/Makefile.tests-simple
-include DADAO-tests/Makefile.tests-dejagnu
 
 bootrom-highfive:
 	@rm -fr $(DIR_DADAO_TESTS_BOOTROM_BUILD)
 	@mkdir $(DIR_DADAO_TESTS_BOOTROM_BUILD)
 	@cp $(DIR_DADAO_TESTS_BOOTROM_SOURCE)/* $(DIR_DADAO_TESTS_BOOTROM_BUILD)
 	@make -s src_dir=$(DIR_DADAO_TESTS_BOOTROM_SOURCE) -C $(DIR_DADAO_TESTS_BOOTROM_BUILD)
+
+TESTS_DEJAGNU_INSTALL		:= $(DIR_DADAO_TOP)/__tests/dejagnu
+
+tests-dejagnu-init:
+	@rm -rf $(TESTS_DEJAGNU_INSTALL)
+	@mkdir -p $(TESTS_DEJAGNU_INSTALL)/usr/bin
+	@mkdir -p $(TESTS_DEJAGNU_INSTALL)/usr/share/dejagnu/baseboards
+	@ln -s -t $(TESTS_DEJAGNU_INSTALL)/usr/bin/ /usr/bin/runtest
+	@ln -s $(DIR_DADAO_INSTALL)/bin/qemu-dadao $(TESTS_DEJAGNU_INSTALL)/usr/bin/dadao-unknown-elf-run
+	@ln -s -t $(TESTS_DEJAGNU_INSTALL)/usr/share/dejagnu/			\
+		/usr/share/dejagnu/*.c						\
+		/usr/share/dejagnu/*.exp					\
+		/usr/share/dejagnu/libexec					\
+		/usr/share/dejagnu/config
+	@ln -s -t $(TESTS_DEJAGNU_INSTALL)/usr/share/dejagnu/baseboards/	\
+		/usr/share/dejagnu/baseboards/basic-sim.exp			\
+		$(DIR_DADAO_TOP)/DADAO-tests/dejagnu/qemu-dadao.exp
 
