--- a/SOC-chipyard/Makefile.chipyard-0107
+++ b/SOC-chipyard/Makefile.chipyard-0107
@@ -11,10 +11,9 @@ CHIPYARD_0107_BUILD		:= $(DIR_DADAO_BUILD)/chipyard-0107
 CHIPYARD_0107_LOG_STDOUT	:= $(DIR_DADAO_LOG)/chipyard-0107.out
 CHIPYARD_0107_LOG_STDERR	:= $(DIR_DADAO_LOG)/chipyard-0107.err
 
-CHIPYARD_0107_CONFIG		:= $(DIR_DADAO_TOP)/SOC-chipyard/chipyard-0107-config
+CHIPYARD_0107_NEWFILES		:= $(DIR_DADAO_TOP)/SOC-chipyard/chipyard-0107-newfiles
 CHIPYARD_0107_PATCHES		:= $(DIR_DADAO_TOP)/SOC-chipyard/chipyard-0107-patches
 
-CHIPYARD_0107_DADAO_WUMING	:= $(DIR_DADAO_TOP)/SOC-chipyard/dadao-wuming
 CHIPYARD_0107_DADAO_CONFIG	?= Wuming1StageConfig
 #CHIPYARD_0107_DADAO_BINARY	?= $(CHIPYARD_0107_SOURCE)/generators/riscv-sodor/riscv-bmarks/dhrystone.riscv
 CHIPYARD_0107_DADAO_BINARY	?= $(DIR_DADAO_TOP)/__tests/benchmarks/dhrystone.dadao
@@ -47,12 +46,12 @@ endif
 	# Setup submodules by terribly downloading git repos from github.com
 	@cd $(CHIPYARD_0107_SOURCE); ./scripts/init-submodules-no-riscv-tools.sh
 	# Copy dadao generators into chipyard
-	@cp -a $(CHIPYARD_0107_DADAO_WUMING) $(CHIPYARD_0107_SOURCE)/generators/
+	@cp -a $(CHIPYARD_0107_NEWFILES)/generators/dadao-wuming $(CHIPYARD_0107_SOURCE)/generators/
 	@cd $(CHIPYARD_0107_SOURCE);								\
 		git add generators/dadao-wuming;						\
 		git commit -asm"DADAO: add dadao-wuming"
 	# Add dadao configs and patches
-	@cp -a $(CHIPYARD_0107_CONFIG)/* $(CHIPYARD_0107_SOURCE)/generators/chipyard/src/main/scala/config/
+	@cp -a $(CHIPYARD_0107_NEWFILES)/generators/chipyard/* $(CHIPYARD_0107_SOURCE)/generators/chipyard/
 	@cd $(CHIPYARD_0107_SOURCE);								\
 		git add generators/chipyard/src/main/scala/config/;				\
 		git commit -asm"DADAO: add chipyard-config";					\
