SIM-qemu: remove .gitmodule fixup
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/SIM-qemu/Makefile.qemu-0600
+++ b/SIM-qemu/Makefile.qemu-0600
@@ -78,7 +78,7 @@ endif
 	@echo "CONFIG: Apply patches"
 	@cd $(QEMU_0600_SOURCE); git am $(QEMU_0600_PATCHES)/9*.patch
 	# FIXUP
-	@cd $(QEMU_0600_SOURCE); git am $(QEMU_0600_FIXUPS)/*.patch
+	#@cd $(QEMU_0600_SOURCE); git am $(QEMU_0600_FIXUPS)/*.patch
 
 qemu-0600-build-new:
 	@rm -fr $(QEMU_0600_BUILD)
