TCH-gcc: rename gcc-1003-dhryrun-testsuite-check to gcc-1003-check
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/TCH-gcc/Makefile.gcc-1003
+++ b/TCH-gcc/Makefile.gcc-1003
@@ -121,18 +121,11 @@ gcc-1003-highfive:
 	@echo "--- BUILD gcc-1003 $(GCC_1003_TARGET) DONE! ---"
 
 gcc-1003-check:
-	@echo "MUST build/install binutils/gcc in the same dir (use tch-highfive)"
-	@make -C $(GCC_1003_BUILD) check-gcc-c		1>> $(GCC_1003_LOG_STDOUT) 2>> $(GCC_1003_LOG_STDERR)
-	@ln --symbolic -t $(GCC_1003_BUILD) $(GCC_1003_BUILD)/gcc/testsuite/gcc/gcc.sum
-
-gcc-1003-dhryrun-testsuite-check:
-	@echo "DHRYRUN GCC-TESTSUITE FOR SELF-CHECKING WITH QEMU-SIMULATOR"
+	@echo "Run gcc-testsuite with qemu simulator"
 	@test -d $(TESTS_DEJAGNU_INSTALL) || make -s -C $(DIR_DADAO_TOP) tests-dejagnu-highfive
 	@PATH=$(TESTS_DEJAGNU_INSTALL)/usr/bin:/bin:/usr/bin				\
 		make -C $(GCC_1003_BUILD) check-gcc-c					\
-		RUNTESTFLAGS="--target_board=qemu-dadao"				\
-		1>> $(GCC_1003_LOG_STDOUT) 2>> $(GCC_1003_LOG_STDERR)
-	@ln --symbolic -t $(GCC_1003_BUILD) $(GCC_1003_BUILD)/gcc/testsuite/gcc/gcc.sum
+		RUNTESTFLAGS="--target_board=qemu-dadao"
 
 gcc-1003-tags:
 	@cd $(GCC_1003_SOURCE) &&							\
