--- a/SIM-qemu/Makefile.qemu-0600
+++ b/SIM-qemu/Makefile.qemu-0600
@@ -124,3 +124,17 @@ qemu-0600-highfive:
 
 qemu-0600-tags:
 	@make -C $(QEMU_0600_SOURCE) ctags
+
+qemu-dejagnu-prepare:
+	@mkdir -p $(DIR_DADAO_INSTALL)/usr/bin
+	@mkdir -p $(DIR_DADAO_INSTALL)/usr/share/dejagnu/baseboards
+	@ln -s -t $(DIR_DADAO_INSTALL)/usr/bin/ /usr/bin/runtest
+	@ln -s $(DIR_DADAO_INSTALL)/bin/qemu-dadao $(DIR_DADAO_INSTALL)/usr/bin/dadao-unknown-elf-run
+	@ln -s -t $(DIR_DADAO_INSTALL)/usr/share/dejagnu/			\
+		/usr/share/dejagnu/*.c						\
+		/usr/share/dejagnu/*.exp					\
+		/usr/share/dejagnu/libexec					\
+		/usr/share/dejagnu/config
+	@ln -s -t $(DIR_DADAO_INSTALL)/usr/share/dejagnu/baseboards/		\
+		/usr/share/dejagnu/baseboards/basic-sim.exp			\
+		$(DIR_DADAO_TOP)/DADAO-tests/dejagnu/qemu-dadao.exp
