DADAO-tests: add Makefile.tests-bmarks-qemu-mibench
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-tests/Makefile.tests
+++ b/DADAO-tests/Makefile.tests
@@ -49,6 +49,7 @@ tests-bmarks-qemu-dhrystone-highfive:
 
 include DADAO-tests/Makefile.tests-bmarks-qemu-embench
 include DADAO-tests/Makefile.tests-bmarks-qemu-coremark
+include DADAO-tests/Makefile.tests-bmarks-qemu-mibench
 
 tests-bootrom-highfive:
 	@rm -fr $(TESTS_BOOTROM_BUILD)
