--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -3,24 +3,40 @@
 #
 generic-y += bitops.h
 generic-y += bug.h
+generic-y += cacheflush.h
+generic-y += checksum.h
 generic-y += cmpxchg.h
+generic-y += compat.h
 generic-y += current.h
+generic-y += delay.h
+generic-y += device.h
 generic-y += div64.h
 generic-y += dma.h
+generic-y += dma-mapping.h
 generic-y += exec.h
 generic-y += extable.h
+generic-y += ftrace.h
+generic-y += hardirq.h
+generic-y += hw_irq.h
 generic-y += io.h
+generic-y += irq.h
+generic-y += irq_regs.h
+generic-y += irq_work.h
 generic-y += irqflags.h
+generic-y += kmap_types.h
 generic-y += linkage.h
+generic-y += local.h
 generic-y += mmiowb.h
 generic-y += mmu.h
 generic-y += module.h
 generic-y += percpu.h
+generic-y += pgalloc.h
 generic-y += preempt.h
 generic-y += sections.h
 generic-y += shmparam.h
 generic-y += string.h
 generic-y += timex.h
+generic-y += tlb.h
 generic-y += topology.h
 generic-y += trace_clock.h
 generic-y += uaccess.h
