ENV-linux: use dadao-unknown-elf- toolchain for build kernel
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/Makefile
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/Makefile
@@ -5,7 +5,7 @@
 #
 ifneq ($(SUBARCH),$(ARCH))
 	ifeq ($(CROSS_COMPILE),)
-		CROSS_COMPILE := $(call cc-cross-prefix, dadao-linux-gnu)
+		CROSS_COMPILE := $(call cc-cross-prefix, dadao-unknown-elf-)
 	endif
 endif
 
