--- a/TCH-gcc/Makefile.gcc-1003
+++ b/TCH-gcc/Makefile.gcc-1003
@@ -123,8 +123,7 @@ gcc-1003-highfive:
 gcc-1003-check:
 	@echo "Run gcc-testsuite with qemu simulator"
 	@test -f $(DIR_DADAO_INSTALL)/usr/bin/runtest || make -s -C $(DIR_DADAO_TOP) qemu-dejagnu-prepare
-	@PATH=$(DIR_DADAO_INSTALL)/usr/bin:/bin:/usr/bin				\
-		make -C $(GCC_1003_BUILD) check-gcc-c					\
+	@PATH=$(DADAO_PATH) make -C $(GCC_1003_BUILD) check-gcc-c			\
 		RUNTESTFLAGS="--target_board=qemu-dadao"
 
 gcc-1003-tags:
