--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -3,6 +3,7 @@
 #
 generic-y += bitops.h
 generic-y += bug.h
+generic-y += bugs.h
 generic-y += cacheflush.h
 generic-y += checksum.h
 generic-y += cmpxchg.h
@@ -13,6 +14,7 @@ generic-y += device.h
 generic-y += div64.h
 generic-y += dma.h
 generic-y += dma-mapping.h
+generic-y += emergency-restart.h
 generic-y += exec.h
 generic-y += extable.h
 generic-y += ftrace.h
@@ -24,10 +26,12 @@ generic-y += irq_regs.h
 generic-y += irq_work.h
 generic-y += irqflags.h
 generic-y += kmap_types.h
+generic-y += kprobes.h
 generic-y += linkage.h
 generic-y += local.h
 generic-y += mmiowb.h
 generic-y += mmu.h
+generic-y += mmu_context.h
 generic-y += module.h
 generic-y += percpu.h
 generic-y += pgalloc.h
@@ -40,3 +44,5 @@ generic-y += tlb.h
 generic-y += topology.h
 generic-y += trace_clock.h
 generic-y += uaccess.h
+generic-y += unaligned.h
+generic-y += user.h
