--- a/DADAO-tests/Makefile.tests
+++ b/DADAO-tests/Makefile.tests
@@ -20,13 +20,11 @@ TESTS_SIMPLE_INSN		?= insn-simple
 TESTS_SIMPLE_HELLOWORLD		?= helloworld
 #EXTRA_GCC_FLAGS		+= -fdump-tree-all -fdump-ipa-all -fdump-rtl-all
 
-TESTS_MAKE			:= make -s DIR_DADAO_TOP=$(DIR_DADAO_TOP)
-
 tests-bmarks-bare-highfive:
 	@rm -fr $(TESTS_BMARKS_BARE_BUILD)
 	@mkdir -p $(TESTS_BMARKS_BARE_BUILD)
 	@ln -s $(TESTS_BMARKS_BARE_SOURCE)/Makefile $(TESTS_BMARKS_BARE_BUILD)/Makefile
-	@$(TESTS_MAKE) src_dir=$(TESTS_BMARKS_BARE_SOURCE) -C $(TESTS_BMARKS_BARE_BUILD)
+	@$(DADAO_MAKE) src_dir=$(TESTS_BMARKS_BARE_SOURCE) -C $(TESTS_BMARKS_BARE_BUILD)
 
 tests-bmarks-qemu-dhrystone-highfive:
 	@rm -fr $(TESTS_BMARKS_QEMU_BUILD)/dhrystone
@@ -57,21 +55,21 @@ tests-bootrom-highfive:
 	@rm -fr $(TESTS_BOOTROM_BUILD)
 	@mkdir -p $(TESTS_BOOTROM_BUILD)
 	@cp $(TESTS_BOOTROM_SOURCE)/* $(TESTS_BOOTROM_BUILD)
-	@$(TESTS_MAKE) src_dir=$(TESTS_BOOTROM_SOURCE) -C $(TESTS_BOOTROM_BUILD)
+	@$(DADAO_MAKE) src_dir=$(TESTS_BOOTROM_SOURCE) -C $(TESTS_BOOTROM_BUILD)
 
 tests-isa-bare-highfive:
 	@rm -fr $(TESTS_ISA_BUILD)
 	@mkdir -p $(TESTS_ISA_BUILD)
 	@ln -s $(TESTS_ISA_SOURCE)/Makefile $(TESTS_ISA_BUILD)/Makefile
-	@$(TESTS_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) dduii-bare
-	@$(TESTS_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) run-bare
+	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) dduii-bare
+	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) run-bare
 
 tests-isa-qemu-highfive:
 	@rm -fr $(TESTS_ISA_BUILD)
 	@mkdir -p $(TESTS_ISA_BUILD)
 	@ln -s $(TESTS_ISA_SOURCE)/Makefile $(TESTS_ISA_BUILD)/Makefile
-	@$(TESTS_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) dduii-qemu
-	@$(TESTS_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) run-qemu
+	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) dduii-qemu
+	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) run-qemu
 
 tests-simple-elf-highfive:
 	@rm -fr $(TESTS_SIMPLE_BUILD)
