--- a/DADAO-tests/Makefile.tests
+++ b/DADAO-tests/Makefile.tests
@@ -12,7 +12,8 @@ TESTS_BOOTROM_SOURCE		:= $(DIR_DADAO_TOP)/DADAO-tests/bootrom/
 TESTS_BOOTROM_BUILD		:= $(DIR_DADAO_TOP)/__tests/bootrom/
 
 TESTS_ISA_SOURCE		:= $(DIR_DADAO_TOP)/DADAO-tests/isa
-TESTS_ISA_BUILD			:= $(DIR_DADAO_TOP)/__tests/isa
+TESTS_ISA_BARE_BUILD		:= $(DIR_DADAO_TOP)/__tests/isa-bare
+TESTS_ISA_QEMU_BUILD		:= $(DIR_DADAO_TOP)/__tests/isa-qemu
 
 TESTS_SIMPLE_SOURCE		:= $(DIR_DADAO_TOP)/DADAO-tests/simple
 TESTS_SIMPLE_BUILD		:= $(DIR_DADAO_TOP)/__tests/simple
@@ -58,18 +59,18 @@ tests-bootrom-highfive:
 	@$(DADAO_MAKE) src_dir=$(TESTS_BOOTROM_SOURCE) -C $(TESTS_BOOTROM_BUILD)
 
 tests-isa-bare-highfive:
-	@rm -fr $(TESTS_ISA_BUILD)
-	@mkdir -p $(TESTS_ISA_BUILD)
-	@ln -s $(TESTS_ISA_SOURCE)/Makefile $(TESTS_ISA_BUILD)/Makefile
-	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) dduii-bare
-	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) run-bare
+	@rm -fr $(TESTS_ISA_BARE_BUILD)
+	@mkdir -p $(TESTS_ISA_BARE_BUILD)
+	@ln -s $(TESTS_ISA_SOURCE)/Makefile $(TESTS_ISA_BARE_BUILD)/Makefile
+	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BARE_BUILD) dduii-bare
+	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BARE_BUILD) run-bare
 
 tests-isa-qemu-highfive:
-	@rm -fr $(TESTS_ISA_BUILD)
-	@mkdir -p $(TESTS_ISA_BUILD)
-	@ln -s $(TESTS_ISA_SOURCE)/Makefile $(TESTS_ISA_BUILD)/Makefile
-	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) dduii-qemu
-	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_BUILD) run-qemu
+	@rm -fr $(TESTS_ISA_QEMU_BUILD)
+	@mkdir -p $(TESTS_ISA_QEMU_BUILD)
+	@ln -s $(TESTS_ISA_SOURCE)/Makefile $(TESTS_ISA_QEMU_BUILD)/Makefile
+	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_QEMU_BUILD) dduii-qemu
+	@$(DADAO_MAKE) src_dir=$(TESTS_ISA_SOURCE) -C $(TESTS_ISA_QEMU_BUILD) run-qemu
 
 tests-simple-elf-highfive:
 	@rm -fr $(TESTS_SIMPLE_BUILD)
