ENV-linux: use DADAO_MAKEP
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/Makefile.linux-0504
+++ b/ENV-linux/Makefile.linux-0504
@@ -74,8 +74,8 @@ linux-0504-build-new:
 
 linux-0504-build:
 	# Making (in several minutes) ...
-	@$(DADAO_MAKE) -C $(LINUX_0504_BUILD)					\
-		ARCH=$(LINUX_0504_ARCH) -j8
+	@$(DADAO_MAKEP) -C $(LINUX_0504_BUILD)					\
+		ARCH=$(LINUX_0504_ARCH)
 
 linux-0504-install:
 	# Make install ...
