ENV-linux: specify CONFIG_PGTABLE_LEVELS as 4
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/Kconfig
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/Kconfig
@@ -8,6 +8,10 @@ config MMU
 	def_bool y
 	select	UACCESS_MEMCPY
 
+config PGTABLE_LEVELS
+	int
+	default 4
+
 config CPU_LITTLE_ENDIAN
 	def_bool y
 
