--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -38,6 +38,7 @@ generic-y += preempt.h
 generic-y += sections.h
 generic-y += shmparam.h
 generic-y += string.h
+generic-y += switch_to.h
 generic-y += timex.h
 generic-y += tlb.h
 generic-y += topology.h
