ENV-linux: add asm-generic kdebug.h and mm-arch-hooks.h
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -26,6 +26,7 @@ generic-y += irq.h
 generic-y += irq_regs.h
 generic-y += irq_work.h
 generic-y += irqflags.h
+generic-y += kdebug.h
 generic-y += kmap_types.h
 generic-y += kprobes.h
 generic-y += linkage.h
@@ -33,6 +34,7 @@ generic-y += local.h
 generic-y += mmiowb.h
 generic-y += mmu.h
 generic-y += mmu_context.h
+generic-y += mm-arch-hooks.h
 generic-y += module.h
 generic-y += pci.h
 generic-y += percpu.h
