--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -19,6 +19,7 @@ generic-y += exec.h
 generic-y += extable.h
 generic-y += fb.h
 generic-y += ftrace.h
+generic-y += futex.h
 generic-y += hardirq.h
 generic-y += hw_irq.h
 generic-y += irq.h
