ENV-linux: add asm-generic asm-offsets.h
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -1,6 +1,7 @@
 #
 # Copyright (C) 2020-2033 Guan Xuetao (AT) Peking Univ.
 #
+generic-y += asm-offsets.h
 generic-y += bitops.h
 generic-y += bug.h
 generic-y += bugs.h
