--- a/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
+++ b/ENV-linux/linux-0504-newfiles/arch/dadao/include/asm/Kbuild
@@ -50,4 +50,5 @@ generic-y += trace_clock.h
 generic-y += uaccess.h
 generic-y += unaligned.h
 generic-y += user.h
+generic-y += vmlinux.lds.h
 generic-y += word-at-a-time.h
