DADAO-opcode: rm bitpat output before script
Signed-off-by: Guan Xuetao <gxt@pku.edu.cn>

--- a/DADAO-opcodes/Makefile.opcodes
+++ b/DADAO-opcodes/Makefile.opcodes
@@ -36,6 +36,7 @@ opcodes-encoding:
 
 opcodes-bitpat:
 	@test -d $(OPCODES_DST_DIR) || make -s opcodes-source
+	@rm -f $(OPCODES_OUTPUT_BITPAT)
 	@$(PYTHON) $(OPCODES_PARSE) --input $(OPCODES_INPUT) --bitpat $(OPCODES_OUTPUT_BITPAT)
 
 opcodes-highfive:
